--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-public/vendor
+public/vendor/*
+!public/vendor/materialize/sass/backbone.scss
 sass
 node_modules
-!public/vendor/materialize/sass/barebone.scss
+.sass-cache/
