--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "compression": "^1.6.2",
     "express": "~4.13.1",
     "fs-extra": "^0.30.0",
+    "helmet": "^2.1.2",
     "morgan": "~1.6.1",
     "node-sass": "^3.8.0",
     "node-uuid": "^1.4.7",
