--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "~1.6.1",
     "node-sass": "^3.8.0",
     "node-uuid": "^1.4.7",
+    "nodemailer": "^4.0.1",
     "replace": "^0.3.0",
     "serve-favicon": "~2.3.0",
     "twig": "^0.9.5"
